kubernetes/apps/default/glance/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: glance.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external.krapulax.dev
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - glance.krapulax.dev
  rules:
    - backendRefs:
        - name: glance
          namespace: default
          port: 80
